cpd3.5: UI changes: services-instances, projects-jobs

--- a/Streams-RollingAverageSample.ipynb
+++ b/Streams-RollingAverageSample.ipynb
@@ -7,10 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "id": "4527aa95-6b29-402c-a521-428958869bb2"
-   },
+   "metadata": {},
    "source": [
     "# IBM Streams sample application\n",
     "\n",
@@ -71,19 +68,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "25f87574-458e-4b4d-95e9-5a1a5972a6a5"
-   },
+   "metadata": {},
    "source": [
     "<a name=\"cpd\"></a>\n",
     "### Option 1: Connect to a Streams instance from an IBM Cloud Pak for Data  project\n",
     "\n",
     "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
-    "1. From the navigation menu, click **My instances**.\n",
-    "2. Click the **Provisioned Instances** tab.\n",
-    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name\n",
-    "4. Run the cell and skip to section 1.2\n",
+    "1. From the navigation menu, click **Services > instances**.\n",
+    "2. Update the value of `streams_instance_name` in the cell below according to your Streams instance name\n",
+    "3. Run the cell and skip to section 1.2\n",
     "\n",
     "The cell below defines a function called `submit_topology` that will be used later on to submit the `Topology` once it is defined.\n",
     "\n"
@@ -92,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "57fb5ffb-d34e-4c75-90f9-0e146f26c18a"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from icpd_core import icpd_util\n",
@@ -120,9 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "5734aca1-2dd4-46e8-ada8-498e4f9a7c39"
-   },
+   "metadata": {},
    "source": [
     "<a name=\"notcpd\"></a>\n",
     "### Option 2: Connect to a Streams instance from IBM Watson Studio and other environments\n",
@@ -142,9 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "0a4f1688-11f2-4b33-a517-7610b6366ceb"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Paste snippet from development guide\n"
@@ -152,9 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "2b666b00-eb67-4a3f-9bff-e70d5555557e"
-   },
+   "metadata": {},
    "source": [
     "### 1.2 Import  the `streamsx` package and verify the package version"
    ]
@@ -162,9 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "e0d79804-eb55-442e-81e1-6920b9367b67"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import streamsx.topology.context\n",
@@ -176,9 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "8357efeb-6a08-4979-a233-c2729e797eb5"
-   },
+   "metadata": {},
    "source": [
     "<a id=\"create\"></a>\n",
     "# 2. Create the application\n",
@@ -190,9 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "60290fbd-1a1d-46aa-961b-dc20cf811f88"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from streamsx.topology.topology import Topology\n",
@@ -202,9 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6edd80db-e7fb-4938-a32b-ce28fd074d96"
-   },
+   "metadata": {},
    "source": [
     "## 2.1 Define sources\n",
     "Your application needs some data to analyze, so the first step is to define a data source that produces the data to be analyzed. \n",
@@ -216,9 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "a963865a-b6c8-47c4-936f-43ef282c83de"
-   },
+   "metadata": {},
    "source": [
     "### 2.1.1 Define a source class\n",
     "\n",
@@ -230,9 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "1c301378-6a4a-40fc-9199-428cfc924d95"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random \n",
@@ -259,9 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "27718829-78c1-4275-ba5a-197b336308e0"
-   },
+   "metadata": {},
    "source": [
     "### 2.1.2  Create the `Stream `\n",
     "\n",
@@ -271,9 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "27c06395-6f7a-4918-9ab8-d310d431b826"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Create a stream from the data using Topology.source\n",
@@ -282,9 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "47f56984-d408-4169-973a-88c7382ea1c1"
-   },
+   "metadata": {},
    "source": [
     "# 2.2 Analyze data\n",
     "\n",
@@ -302,9 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "005f00b9-ba16-4d5f-82e4-5a6338c8e2c8"
-   },
+   "metadata": {},
    "source": [
     "### 2.2.1 Filter data from the  `Stream`  \n",
     "\n",
@@ -314,9 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "da0d0cfb-a7f8-4b88-a065-a2df8b5ec265"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Accept only values greater than 100\n",
@@ -330,9 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "2a3a3526-06c8-4073-b695-03f242aea62a"
-   },
+   "metadata": {},
    "source": [
     "### 2.2.2  Compute averages on the  `Stream`  \n",
     "\n",
@@ -346,9 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "fe2c8528-f9c3-4ed0-91bd-9d957fa630fc"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -384,9 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6d12a4a8-01cc-43bb-ae5e-6e7c3aa11188"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "### 2.2.3 Enrich the data on the `Stream`\n",
@@ -406,9 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "14c737a7-3b74-4774-bee3-e558fad6a54a"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Modify this tuple with the coordinates of the sensor\n",
@@ -428,9 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "d82251d4-ec07-44c4-a681-e41f80c99ce8"
-   },
+   "metadata": {},
    "source": [
     "# 2.3 Create a `View` to preview the tuples on the `Stream` \n",
     "\n",
@@ -446,9 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "b91ee266-8b17-4577-9d62-4d4440aacff0"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "averages_view = enriched_average.view(name=\"RollingAverage\", \n",
@@ -457,9 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "7d3dad37-97f1-45c6-9058-3f2c58ec095c"
-   },
+   "metadata": {},
    "source": [
     "You can <a href=\"http://ibmstreams.github.io/streamsx.documentation/docs/python/1.6/python-appapi-devguide-6/#accessing-the-tuples-of-a-view\">connect to a view in <em>any</em> running Streams job using the REST API</a> , regardless of what language was used to create the application.\n",
     "\n",
@@ -475,9 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "b490b2cd-489a-4681-bcd8-51b9efeeedc9"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -493,9 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "aadd5149-4187-4b57-9274-26b417663fd9"
-   },
+   "metadata": {},
    "source": [
     "<a name=\"launch\"></a>\n",
     "\n",
@@ -506,9 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "11a28eca-c6e8-4664-9364-7d952773de0d"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The submission_result object contains information about the running application, or job\n",
@@ -524,9 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "40114c18-e3b5-41a6-a433-f484ea411359"
-   },
+   "metadata": {},
    "source": [
     "<a name=\"view\"></a>\n",
     "\n",
@@ -538,9 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "0874228c-f300-4b9c-a349-1e77ffa03b56"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Fetching view data ...\")\n",
@@ -555,9 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "c73a43bc-8fd3-4e70-b42d-5b833eda65a1"
-   },
+   "metadata": {},
    "source": [
     "## 4.1 Display the results in real time\n",
     "Calling `View.display()` from the notebook displays the results of the view in a table that is updated in real-time."
@@ -566,9 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "ecea5a5e-7fee-45d9-b96e-b6c54cf46cbe"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Display the results for 30 seconds\n",
@@ -577,9 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "2dee4f97-cb67-4ba5-bd81-2c4130a622a1"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## 4.2 See job status \n",
@@ -588,8 +522,8 @@
     "\n",
     "To view job status and logs:\n",
     "<ol>\n",
-    "<li>From the main menu, go to <b>My Instances &gt; Jobs</b>. </li>\n",
-    "<li>Find your job based on the <code>JobId</code> printed when you submitted the topology.</li>\n",
+    "<li>From the main menu, go to <b>Projects &gt; Jobs</b>. </li>\n",
+    "<li>Find your job based on the <code>JobName</code> printed when you submitted the topology.</li>\n",
     "<li>Select <b>View graph</b> from the context menu action for the running job.</li>\n",
     "</ol>\n",
     "\n",
@@ -600,9 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "0ed0df52-4ac8-416a-898f-acdff46be92e"
-   },
+   "metadata": {},
    "source": [
     "<a name=\"cancel\"></a>\n",
     "\n",
@@ -612,19 +544,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "fd8efc7e-61cc-45b1-9f14-3b1282c60b45"
-   },
+   "metadata": {},
    "source": [
-    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**."
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **Projects** > **Jobs**."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "2a30738a-5478-4d94-bfab-8c9d6e89c681"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# cancel the job directly using the Job object\n",
@@ -635,9 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "eae6a864-2c3e-469b-8f63-886c39ac34ac"
-   },
+   "metadata": {},
    "source": [
     "# Summary\n",
     "\n",
