--- a/Streams-BasicSample.ipynb
+++ b/Streams-BasicSample.ipynb
@@ -70,10 +70,9 @@
     "\n",
     "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
-    "1. From the navigation menu, click **My instances**.\n",
-    "2. Click the **Provisioned Instances** tab.\n",
-    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name\n",
-    "4. Run the cell and skip to section 1.2\n",
+    "1. From the navigation menu, click **Services > Instances**.\n",
+    "2. Update the value of `streams_instance_name` in the cell below according to your Streams instance name\n",
+    "3. Run the cell and skip to section 1.2\n",
     "\n",
     "The cell below defines a function called `submit_topology` that will be used later on to submit the `Topology` once it is defined.\n",
     "\n"
@@ -254,7 +253,7 @@
     "\n",
     "# 5. Cancel the job\n",
     "\n",
-    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**."
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **Projects** > **Jobs**."
    ]
   },
   {
@@ -272,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6",
    "language": "python",
    "name": "python3"
   },
@@ -286,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
