--- a/Streams-EventStoreSample.ipynb
+++ b/Streams-EventStoreSample.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
-    "1. From the navigation menu, click **My instances**.\n",
+    "1. From the navigation menu, click **Services > instances**.\n",
     "2. Click the **Provisioned Instances** tab.\n",
     "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
    ]
@@ -101,12 +101,11 @@
     "\n",
     "Update the name for the EventStore service/instance name.\n",
     "\n",
-    "1. From the navigation menu, click **My instances**.\n",
-    "2. Click the **Provisioned Instances** tab.\n",
-    "3. Update the value of `eventstore_instance` in the cell below according to your Event Store instance name.\n",
-    "4. Click **View details** for your Event Store instance.\n",
-    "5. Update the values of `es_db` (Database name), `deployment_id` and `es_connection` (Scala Connection URL) in the cell below according to your Event Store instance settings.\n",
-    "6. Set the values for `host` and `port` from Cloud Pak for Data URL"
+    "1. From the navigation menu, click **Services > Instances**.\n",
+    "2. Update the value of `eventstore_instance` in the cell below according to your Event Store instance name.\n",
+    "3. Click **View details** for your Event Store instance.\n",
+    "4. Update the values of `es_db` (Database name), `deployment_id` and `es_connection` (Scala Connection URL) in the cell below according to your Event Store instance settings.\n",
+    "5. Set the values for `host` and `port` from Cloud Pak for Data URL"
    ]
   },
   {
@@ -500,10 +499,10 @@
     "\n",
     "## 4.1 See job status \n",
     "\n",
-    "You can view job status and logs by going to **My Instances** > **Jobs**. Find your job based on the id printed above.\n",
+    "You can view job status and logs by going to **Projects** > **Jobs**. Find your job based on the id printed above.\n",
     "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **My Instances** > **Jobs**. Select \"View graph\" action for the running job.\n"
+    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n"
    ]
   },
   {
@@ -519,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**."
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **Projects** > **Jobs**."
    ]
   },
   {
