--- a/Streams-EventStreamsSample.ipynb
+++ b/Streams-EventStreamsSample.ipynb
@@ -48,9 +48,8 @@
     "\n",
     "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
-    "1. From the navigation menu, click **My instances**.\n",
-    "2. Click the **Provisioned Instances** tab.\n",
-    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
+    "1. From the navigation menu, click **Services > instances**.\n",
+    "2. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
    ]
   },
   {
@@ -484,17 +483,17 @@
     "\n",
     "## 4.2 See job status \n",
     "\n",
-    "You can view job status and logs by going to **My Instances** > **Jobs**. Find your job based on the id printed above.\n",
+    "You can view job status and logs by going to **Projects** > **Jobs**. Find your job based on the name printed above.\n",
     "Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **My Instances** > **Jobs**. Select \"View graph\" action for the running job.\n",
+    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n",
     "\n",
     "\n",
     "<a name=\"cancel\"></a>\n",
     "\n",
     "# 5. Cancel the job\n",
     "\n",
-    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**."
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **Projects** > **Jobs**."
    ]
   },
   {
