--- a/Streams-SPLToolkitsTutorial.ipynb
+++ b/Streams-SPLToolkitsTutorial.ipynb
@@ -53,9 +53,8 @@
     "\n",
     "In order to submit a Streams application you need to provide the name of the Streams instance.\n",
     "\n",
-    "1. From the navigation menu, click **My instances**.\n",
-    "2. Click the **Provisioned Instances** tab.\n",
-    "3. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
+    "1. From the navigation menu, click **Services > Instances**.\n",
+    "2. Update the value of `streams_instance_name` in the cell below according to your Streams instance name."
    ]
   },
   {
@@ -364,9 +363,9 @@
    "source": [
     "### 4.4 See job status\n",
     "\n",
-    "You can view job status and logs by going to My Instances > Jobs. Find your job based on the id printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
+    "You can view job status and logs by going to Projects > Jobs. Find your job based on the name printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **My Instances** > **Jobs**. Select \"View graph\" action for the running job.\n"
+    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n"
    ]
   },
   {
@@ -375,7 +374,7 @@
    "source": [
     "### 4.5 Cancel the job\n",
     "\n",
-    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**."
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **Projects** > **Jobs**."
    ]
   },
   {
@@ -554,9 +553,9 @@
    "source": [
     "### 5.6 See job status\n",
     "\n",
-    "You can view job status and logs by going to My Instances > Jobs. Find your job based on the id printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
+    "You can view job status and logs by going to Projects > Jobs. Find your job based on the name printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **My Instances** > **Jobs**. Select \"View graph\" action for the running job.\n"
+    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" action for the running job.\n"
    ]
   },
   {
@@ -565,7 +564,7 @@
    "source": [
     "### 5.7 Cancel the jobs\n",
     "\n",
-    "The Streams jobs are running in the Streams service. You can cancel them within the notebook or delete them from **My Instances** > **Jobs**."
+    "The Streams jobs are running in the Streams service. You can cancel them within the notebook or delete them from **Projects** > **Jobs**."
    ]
   },
   {
@@ -738,9 +737,9 @@
    "source": [
     "### 6.4 See job status\n",
     "\n",
-    "You can view job status and logs by going to My Instances > Jobs. Find your job based on the id printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
+    "You can view job status and logs by going to Projects > Jobs. Find your job based on the name printed above. Retrieve job logs using the \"Download logs\" action from the job's context menu.\n",
     "\n",
-    "To view other information about the job such as detailed metrics, access the graph. Go to **My Instances** > **Jobs**. Select \"View graph\" for the running job.\n"
+    "To view other information about the job such as detailed metrics, access the graph. Go to **Projects** > **Jobs**. Select \"View graph\" for the running job.\n"
    ]
   },
   {
@@ -749,7 +748,7 @@
    "source": [
     "### 6.5 Cancel the job\n",
     "\n",
-    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **My Instances** > **Jobs**."
+    "The Streams job is running in the Streams service. You can cancel it within the notebook or delete it from **Projects** > **Jobs**."
    ]
   },
   {
