Timeseries notebook update, resolves #88

--- a/Streams-TimeseriesForecast.ipynb
+++ b/Streams-TimeseriesForecast.ipynb
@@ -291,7 +291,7 @@
    },
    "source": [
     "## 2.3 Define a data source as a composite\n",
-    "[Composite transforms](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.composite.html#module-streamsx.topology.composite) encapsulate multiple stream transforms in a single class and can be used as . In this notebook we will define a [Source](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.composite.html#streamsx.topology.composite.Source) that emits a punctuated stream. The subgraph in our composite consists of the actual source followed by a punctuation inserter pseudo transform.\n",
+    "[Composite transforms](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.composite.html#module-streamsx.topology.composite) encapsulate multiple stream transforms in a single class for hiding compexity and re-use. In this notebook we will define a [Source](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.composite.html#streamsx.topology.composite.Source) that emits a punctuated stream. The subgraph in our composite consists of the actual source followed by a punctuation inserter pseudo transform.\n",
     "\n",
     "As we create a _source composite_, we derive our class from `streamsx.topology.composite.Source`. The transforms of the source must be implemented in the overwritten `populate` method. This method must return a `Stream` object:"
    ]
